集成spring-boot-starter-validation

--- a/demo/src/main/resources/i18n/messages_en_US.properties
+++ b/demo/src/main/resources/i18n/messages_en_US.properties
@@ -1,2 +1,4 @@
 
 UNKNOWN_ERROR=unknown error
+demo.name.null=The demo key cannot be empty, here is the validation message
+demo.key.length=The key length of the demo is incorrect
