参考 assert 处理空值异常, 调整结构

--- a/demo/src/main/resources/i18n/messages_en_US.properties
+++ b/demo/src/main/resources/i18n/messages_en_US.properties
@@ -1,4 +1,6 @@
 
 UNKNOWN_ERROR=unknown error
+PARAM_VERIFICATION_ERROR=Parameter check error
+TEST_ERROR=Test error, parameter verification failed{0}
 demo.name.null=The demo key cannot be empty, here is the validation message
 demo.key.length=The key length of the demo is incorrect
